--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   another_flushbar: ^1.12.30
+  crypto: ^3.0.3
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
