--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   intl: ^0.18.1
   pasteboard: ^0.2.0
   path_provider: ^2.1.0
+  qr_flutter: ^4.1.0
   uuid: ^4.0.0
 
 dev_dependencies:
