--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   another_flushbar: ^1.12.30
+  archive: ^3.4.9
   crypto: ^3.0.3
   cupertino_icons: ^1.0.2
   file_picker: ^5.5.0
@@ -37,9 +38,10 @@ dependencies:
   image: ^4.2.0
   intl: ^0.18.1
   pasteboard: ^0.2.0
-  path_provider: ^2.1.0
+  path_provider: ^2.1.1
   qr_flutter: ^4.1.0
   uuid: ^4.0.0
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
